Fixed overlap nav issue with cell toolbar

--- a/app/assets/stylesheets/b4/sites.css
+++ b/app/assets/stylesheets/b4/sites.css
@@ -166,3 +166,11 @@ nav.navbar:not(.navbar-fixed-top) {
 	left: auto;
 	right: 100%;
 }
+
+.navbar {
+	z-index: 1999;
+}
+
+#wcms-cell-controls-header {
+	z-index: 2001;
+}
