--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -908,6 +908,9 @@ div.wcms-starter-box {
   color: rgba(0, 0, 0, .9);
 }
 
+.wcms-bumped-down {
+	bottom: 30px !important;
+}
 
 
 
