--- a/app/assets/stylesheets/f6/sites.css
+++ b/app/assets/stylesheets/f6/sites.css
@@ -20,7 +20,6 @@ body.wcms-navbar-fixed-bottom #wcms-content-wrapper {
 }
 
 nav.wcms-cell-controls:not(#wcms-cell-controls-header) {
-	/*margin-top: -40px;*/
 	border-radius: 0 0 0.25rem 0.25rem;
 	background-color: rgba(51, 51, 51, 0.85);
 	z-index: 2000;
@@ -72,6 +71,7 @@ nav.wcms-cell-controls {
 	background-color: rgba(51, 51, 51, 0.85);
 	z-index: 2000;
 	position: relative;
+	padding: 2px;
 }
 
 .wcms-header .card, .wcms-header .card-img {
